# event-cart

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
docs/: architecture-decisions.md  testing-guide.md
docs/architecture/: broker-vs-brokerless.md  idempotency.md  nats-jetstream-mode.md  observability.md  overview.md  retry-dead-letter-replay.md  saga-workflow.md  transactional-outbox.md
docs/diagrams/: brokerless-mode.mmd  context.mmd  failure-sequence.mmd  nats-mode.mmd  outbox.mmd  runtime.mmd  success-sequence.mmd
docs/domain/: order-lifecycle.md
docs/examples/: README.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260626_0001_create_orders.py  20260626_0002_create_inventory_items.py  20260626_0003_create_outbox_events.py  20260626_0004_create_idempotency_keys.py  20260626_0005_create_inbox_events.py  20260626_0006_create_payments.py  20260626_0007_create_invoices.py  20260626_0008_create_notifications.py  20260626_0009_create_event_processing_attempts.py  20260626_0010_add_outbox_next_attempt_at.py  20260626_0011_create_dead_letter_events.py  20260626_0012_add_dead_letter_replay_fields.py
observability/: prometheus.yml
src/eventcart/: __init__.py  app.py  (+3 more)
tests/: test_brokerless_dispatcher.py  test_brokerless_retry.py  test_brokerless_workflow.py  test_config.py  test_database.py  test_dead_letter_events.py  test_dead_letter_replay.py  test_event_envelope.py  test_event_processing_attempts.py  test_health.py  test_idempotency_service.py  test_inbox_idempotency.py  test_inventory_api.py  test_inventory_worker.py  test_invoice_worker.py  test_logging.py  test_metrics.py  test_nats_publisher.py  test_notification_worker.py  test_observability_compose.py  test_order_models.py  test_order_workflow.py  test_orders_api.py  test_orders_idempotency.py  test_orders_outbox.py  test_outbox_notify.py  test_outbox_publisher_worker.py  test_outbox_repository.py  test_payment_worker.py  test_tracing.py
(+39 files in other folders)
