[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eventcart"
version = "0.1.0"
description = "EventCart is a learning backend for event-driven order workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "nats-py>=2.8,<3.0",
  "opentelemetry-api>=1.25,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
  "opentelemetry-sdk>=1.25,<2.0",
  "prometheus-client>=0.20,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
  "pyright>=1.1,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eventcart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
